--- a/999_ITicket/src/main/webapp/resources/css/style.css
+++ b/999_ITicket/src/main/webapp/resources/css/style.css
@@ -212,7 +212,7 @@ h1 {
 }
 
 .box input {
-    width: 290px;
+    width: 295px;
     height: 32px;
     margin-right: 20px;
     margin-left: 20px;
@@ -482,6 +482,7 @@ legend {
 }
 
 .visual {
+	margin-top: 174px;
     width: 100%;
     height: 410px;
     background: yellow;
