--- a/999_ITicket/src/main/webapp/resources/css/style.css
+++ b/999_ITicket/src/main/webapp/resources/css/style.css
@@ -238,6 +238,7 @@ legend {
     width: 100%;
     height: 43px;
     background: #e25147;
+    padding-left: 10px;
 }
 
 .gnb {
@@ -249,6 +250,7 @@ legend {
     float: left;
     height: 43px;
     line-height: 43px;
+    color: white;
 }
 
 .gnb > li > a:not(.gnb>li:first-child>a) {
@@ -260,8 +262,8 @@ legend {
 }
 
 .allmenu {
-    width: 950px;
-    height: 550px;
+    width: 1000px;
+    height: 300px;
     background: #fff;
     position: absolute;
     left: 50%;
@@ -272,9 +274,9 @@ legend {
 }
 
 .allmenu > ul:first-child > li {
-    width: 237.5px;
+    width: 200px;
     float: left;
-    height: 200px;
+    height: 280px;
     text-indent: 20px;
     border-right: 1px solid #d9d9d9;
     margin-top: 15px;
@@ -288,7 +290,6 @@ legend {
     content: "";
     display: block;
     width: 200px;
-    border-bottom: 1px solid #d9d9d9;
     margin: -10px auto;
 }
 
@@ -310,10 +311,7 @@ legend {
 }
 
 .allmenu > ul:last-child {
-    width: 950px;
-    height: 45px;
-    border: 1px solid #d9d9d9;
-    margin-top: 505px;
+    
 }
 
 .allmenu > ul:last-child > li {
